# bp10-dsp-controller

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TASKS.md  THIRD_PARTY_NOTICES.md  VERSION  partitions.csv  partitions_16mb.csv  partitions_4mb.csv  sdkconfig.defaults  sdkconfig.devboard.defaults  sdkconfig.product.defaults
main/: CMakeLists.txt  Kconfig.projbuild  api_handlers.c  api_handlers.h  app_config.h  config_io.c  config_io.h  dsp_model.c  dsp_model.h  http_server.c  http_server.h  idf_component.yml  main.c  mdns_service.c  mdns_service.h  mvs_device_profile.c  mvs_device_profile.h  mvs_device_runtime.c  mvs_device_runtime.h  mvs_protocol.c  mvs_protocol.h  mvs_usb_profile.c  nvs_settings.c  nvs_settings.h  ota_update.c  ota_update.h  usb_host_ctrl.c  usb_host_ctrl.h  web_ui.c  web_ui.h  wifi_manager.c  wifi_manager.h
main/test/: test_dsp_model.c  test_main.c  test_protocol.c
main/test/mock/: mock_usb_transport.c  mock_usb_transport.h
main/www/: app.js  index.html  style.css
outputs/: generic-defaults-hardware-2026-07-21.md  phase2-live-hardware-2026-07-21.md
tests/host/: compare_a800x_baseline.sh  dump_a800x_frames.c  run.sh  test_config_io.c  test_delay_verify.c  test_generic_acp.c  test_nvs_settings.c
tests/host/fixtures/: README.md  a800x_v0.4.0.frames
tests/host/include/: esp_check.h  esp_err.h  esp_log.h  esp_ota_ops.h  nvs.h  sdkconfig.h
tickets/done/: 2026-07-18-generic-acp-classic.md  2026-07-18-softap-lifecycle.md  2026-07-21-generic-defaults-no-write.md  2026-07-21-phase2-vb-phase-delay.md
